Added bus picture

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Пасажирські перевезення</title>
   <meta name="description" content="Пасажирські перевезення Авто-Експрес">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="images/favicon.png">
   <meta property="og:image" content="img/dest/preview.jpg">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -52,9 +52,9 @@
       <div class="header-h1">
         <h1>Пасажирські перевезення по Україні</h1>
       </div>
-      <p class="pb-5">Найлегший спосіб подорожувати</p>
+      <p class="pb-sm-5 jumbotron-text">Найлегший спосіб подорожувати</p>
       <p>Транспортна компанія "АВТО-ЕКСПРЕС" надає послуги пасажирських перевезень. Ми даємо Вам можливість безпечних подорожей країною.</p>
-      <div class="row justify-content-center mt-5 text-uppercase jumbotron-button-block">
+      <div class="row justify-content-center mt-sm-5 text-uppercase jumbotron-button-block">
         <a class="col-sm-2 btn btn-danger btn-lg m-2 " href="#about" role="button">Знати більше</a>
         <a class="col-sm-2 btn btn-dark btn-lg m-2" href="#contacts" role="button">Контакти</a>
       </div>
@@ -65,7 +65,9 @@
 <section id="about" class="about">
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dignissimos ducimus earum hic nam necessitatibus nostrum odio odit omnis similique! At corporis, dolores iste nesciunt perspiciatis quidem repellendus sunt voluptates!</p>
+    <p>Компанія ПАТ "АВТО-ЕКСПРЕС" багато років успішно працює на ринку пасажирських автобусних перевезень.</p>
+    <p>Історія компанії почалася з 1 транспортної одиниці та 1 маршруту. Поступово наш автопарк розширювався і сьогодні до послуг наших кліентів 35 автобусів різної місткості. Ми ретельно контролюємо технічний стан кожного транспортного засобу.</p>
+    <p>Наші водії характеризуються високими знаннями технічної бази автотранспортних засобів, автомобільних доріг України, безаварійним досвідом роботи.</p>
     <h2 class="h2 text-center mb-5 pt-5">Наші переваги</h2>
     <div class="about-items text-center">
       <div class="about-item">Досвід роботи</div>
@@ -93,7 +95,13 @@
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>Оренда автобуса на екскурсїі</p>
+          <p>Груповий трансфер</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-info">
+          <p>Оренда автобуса на екскурсії</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
@@ -105,37 +113,31 @@
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Шкільний автобус</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Корпоративні поїздки</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Оренда автобуса на весілля</p>
+        </div>
+      </div>
+      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
+        <img class="img-fluid" src="images/dest/bus/neoplan1997.jpg" alt="">
+        <div class="services-info">
+          <p>Паломницькі та релігійні тури</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
         <div class="services-info">
-          <p>aqsedqwe</p>
-        </div>
-      </div>
-      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
-        <div class="services-info">
-          <p>aqsedqwe</p>
-        </div>
-      </div>
-      <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
-        <div class="services-info">
-          <p>aqsedqwe</p>
+          <p>Оренда автобуса на похорони</p>
         </div>
       </div>
       </div>
@@ -153,96 +155,240 @@
     <ul class="gallery-list row no-gutters row d-flex justify-content-center align-items-center">
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-about.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-about.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/bova fhd1998.jpg" data-title="BOVA FHD" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/bova fhd1998.jpg" alt="BOVA FHD">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Mercedes Benz Sprinter 313CDI</h5>
-              <p class="animated fadeInUp">8 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">BOVA FHD</h6>
+              <p class="animated fadeInUp">33 місця</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/isuzu 2005.jpg" data-title="ISUZU" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/isuzu 2005.jpg" alt="ISUZU">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Mercedes Benz</h5>
-              <p class="animated fadeInUp">15 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">ISUZU</h6>
+              <p class="animated fadeInUp">30 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/MAN 11.220.jpg" data-title="MAN 11.220" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/MAN 11.220.jpg" alt="MAN 11.220">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h5 class="upper-text mb-1 animated fadeInDown">MAN 11.220</h5>
+              <p class="animated fadeInUp">35 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/man 11.230.jpg" data-title="MAN 11.220" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/man 11.230.jpg" alt="MAN 11.230">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">MAN 11.230</h6>
+              <p class="animated fadeInUp">35 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/mb 313cdi.jpg" data-title="Mercedes Benz 313 CDI" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 313cdi.jpg" alt="Mercedes Benz 313 CDI">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 313 CDI</h6>
+              <p class="animated fadeInUp">18 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/mb 316cdi 1998.jpg" data-title="Mercedes Benz 316" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 316cdi 1998.jpg" alt="Mercedes Benz 316">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 316</h6>
+              <p class="animated fadeInUp">16-18-21 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/mb 412.jpg" data-title="Mercedes Benz 412" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 412.jpg" alt="Mercedes Benz 412">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 412</h6>
+              <p class="animated fadeInUp">17 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus-tumb.jpg" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="gallery-image-thumb">
+        <a href="images/dest/bus/mb 416.jpg" data-title="Mercedes Benz 416 CDI" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 416.jpg" alt="Mercedes Benz 416 CDI">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h5 class="upper-text mb-1 animated fadeInDown">Project Name</h5>
-              <p class="animated fadeInUp">User Interface Design</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 416 CDI</h6>
+              <p class="animated fadeInUp">16 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/mercedes-benz o818d.jpg" data-title="Mercedes Benz O818D" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mercedes-benz o818d.jpg" alt="Mercedes Benz O818D">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz O818D</h6>
+              <p class="animated fadeInUp">30 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/neoplan n213 shd.jpg" data-title="NEOPLAN" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/neoplan n213 shd.jpg" alt="NEOPLAN">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN</h6>
+              <p class="animated fadeInUp">49 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/neoplan1997.jpg" data-title="NEOPLAN N213 SHD" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/neoplan1997.jpg" alt="NEOPLAN N213 SHD">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN N213 SHD</h6>
+              <p class="animated fadeInUp">34 місця</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/scania 1994.jpg" data-title="SCANIA" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/scania 1994.jpg" alt="SCANIA">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">SCANIA</h6>
+              <p class="animated fadeInUp">55 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/temza 2008.jpeg" data-title="Temsa" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/temza 2008.jpeg" alt="Temsa">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">Temsa</h6>
+              <p class="animated fadeInUp">29 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/toyota 1999.jpg" data-title="TOYOTA" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/toyota 1999.jpg" alt="TOYOTA">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">TOYOTA</h6>
+              <p class="animated fadeInUp">25 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/van hooi.jpg" data-title="VAN HOOI" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/van hooi.jpg" alt="VAN HOOI">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">VAN HOOI</h6>
+              <p class="animated fadeInUp">56 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/vw lt35.jpg" data-title="VOLKSWAGEN lt-35" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/vw lt35.jpg" alt="VOLKSWAGEN lt-35">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-35</h6>
+              <p class="animated fadeInUp">16-17-20 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/vw lt46 2000.jpg" data-title="VOLKSWAGEN lt-46" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/vw lt46 2000.jpg" alt="VOLKSWAGEN lt-46">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-46</h6>
+              <p class="animated fadeInUp">16-18 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/yutong2007.jpg" data-title="YUTONG" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/yutong2007.jpg" alt="YUTONG">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
+              <p class="animated fadeInUp">29 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/yutong2008.jpg" data-title="YUTONG" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/yutong2008.jpg" alt="YUTONG">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
+              <p class="animated fadeInUp">29 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/БАЗ А 079.23.jpg" data-title="БАЗ А 079.23" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/БАЗ А 079.23.jpg" alt="БАЗ А 079.23">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">БАЗ А 079.23</h6>
+              <p class="animated fadeInUp">28 місць</p>
             </div>
           </div>
         </a>
