Added overlay to image on services section

--- a/app/index.html
+++ b/app/index.html
@@ -87,55 +87,73 @@
     <h2 class="h2 text-center mb-5 pt-5">Послуги</h2>
     <div class="services-images row d-flex justify-content-center align-items-center">
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Пасажирські перевезення по Україні</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Груповий трансфер</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Оренда автобуса на екскурсії</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Тури на море</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Шкільний автобус</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Корпоративні поїздки</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Оренда автобуса на весілля</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus/neoplan1997.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Паломницькі та релігійні тури</p>
         </div>
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
-        <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        <div class="services-overlay-img">
+          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+        </div>
         <div class="services-info">
           <p>Оренда автобуса на похорони</p>
         </div>
