--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
 <section id="about" class="about">
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
+    <h3 class="text-center mb-5">Черкаси Київ Вінниця Харків Дніпро</h3>
     <p>Компанія ПАТ "АВТО-ЕКСПРЕС" багато років успішно працює на ринку пасажирських автобусних перевезень.</p>
     <p>Історія компанії почалася з 1 транспортної одиниці та 1 маршруту. Поступово наш автопарк розширювався і сьогодні до послуг наших кліентів 35 автобусів різної місткості. Ми ретельно контролюємо технічний стан кожного транспортного засобу.</p>
     <p>Наші водії характеризуються високими знаннями технічної бази автотранспортних засобів, автомобільних доріг України, безаварійним досвідом роботи.</p>
@@ -88,7 +89,7 @@
     <div class="services-images row d-flex justify-content-center align-items-center">
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/1pasajirski_perevezennia.jpg" alt="perevezennia">
         </div>
         <div class="services-info">
           <p>Пасажирські перевезення по Україні</p>
@@ -96,7 +97,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/2group_transfer.jpg" alt="transfer">
         </div>
         <div class="services-info">
           <p>Груповий трансфер</p>
@@ -104,7 +105,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/3excursions.jpg" alt="excursions">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на екскурсії</p>
@@ -112,7 +113,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/4sea.jpg" alt="sea">
         </div>
         <div class="services-info">
           <p>Тури на море</p>
@@ -120,7 +121,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/5school.jpg" alt="school">
         </div>
         <div class="services-info">
           <p>Шкільний автобус</p>
@@ -128,7 +129,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/6corporate.jpg" alt="corporate">
         </div>
         <div class="services-info">
           <p>Корпоративні поїздки</p>
@@ -136,7 +137,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/7wedding.jpg" alt="wedding">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на весілля</p>
@@ -144,7 +145,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/8religin.jpg" alt="religin">
         </div>
         <div class="services-info">
           <p>Паломницькі та релігійні тури</p>
@@ -152,7 +153,7 @@
       </div>
       <div class="services-item col-6 col-md-4 col-lg-4 mb-4">
         <div class="services-overlay-img">
-          <img class="img-fluid" src="images/dest/bus-tumb.jpg" alt="">
+          <img class="img-fluid" src="images/dest/services/9RIP.jpg" alt="RIP">
         </div>
         <div class="services-info">
           <p>Оренда автобуса на похорони</p>
