Mini fix: added town, change bus-line

--- a/app/index.html
+++ b/app/index.html
@@ -65,10 +65,12 @@
 <section id="about" class="about">
   <div class="container-md pt-5">
     <h2 class="h2 text-center mb-5 pt-5">Про компанію</h2>
-    <h3 class="text-center mb-5">Черкаси Київ Вінниця Харків Дніпро</h3>
     <p>Компанія ПАТ "АВТО-ЕКСПРЕС" багато років успішно працює на ринку пасажирських автобусних перевезень.</p>
     <p>Історія компанії почалася з 1 транспортної одиниці та 1 маршруту. Поступово наш автопарк розширювався і сьогодні до послуг наших кліентів 35 автобусів різної місткості. Ми ретельно контролюємо технічний стан кожного транспортного засобу.</p>
     <p>Наші водії характеризуються високими знаннями технічної бази автотранспортних засобів, автомобільних доріг України, безаварійним досвідом роботи.</p>
+    <h3 class="h2 text-center mb-5 pt-5">Напрямки:</h3>
+    <h4 class="text-center mb-3">Черкаси-Київ, Черкаси-Вінниця, Черкаси-Харків, Черкаси-Дніпро</h4>
+    <h4 class="text-center mb-3">Київ-Черкаси, Вінниця-Черкаси, Харків-Черкаси, Дніпро-Черкаси</h4>
     <h2 class="h2 text-center mb-5 pt-5">Наші переваги</h2>
     <div class="about-items text-center">
       <div class="about-item">Досвід роботи</div>
@@ -174,12 +176,36 @@
     <ul class="gallery-list row no-gutters row d-flex justify-content-center align-items-center">
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/yutong2007.jpg" data-title="YUTONG" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/yutong2007.jpg" alt="YUTONG">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
+              <p class="animated fadeInUp">29 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus/bova fhd1998.jpg" data-title="BOVA FHD" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus/bova fhd1998.jpg" alt="BOVA FHD">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
               <h6 class="upper-text mb-1 animated fadeInDown">BOVA FHD</h6>
               <p class="animated fadeInUp">33 місця</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/mb 313cdi.jpg" data-title="Mercedes Benz 313 CDI" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 313cdi.jpg" alt="Mercedes Benz 313 CDI">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 313 CDI</h6>
+              <p class="animated fadeInUp">18 місць</p>
             </div>
           </div>
         </a>
@@ -222,12 +248,12 @@
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/mb 313cdi.jpg" data-title="Mercedes Benz 313 CDI" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/mb 313cdi.jpg" alt="Mercedes Benz 313 CDI">
+        <a href="images/dest/bus/neoplan n213 shd.jpg" data-title="NEOPLAN" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/neoplan n213 shd.jpg" alt="NEOPLAN">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 313 CDI</h6>
-              <p class="animated fadeInUp">18 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN</h6>
+              <p class="animated fadeInUp">49 місць</p>
             </div>
           </div>
         </a>
@@ -246,24 +272,24 @@
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/mb 412.jpg" data-title="Mercedes Benz 412" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/mb 412.jpg" alt="Mercedes Benz 412">
+        <a href="images/dest/bus/yutong2008.jpg" data-title="YUTONG" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/yutong2008.jpg" alt="YUTONG">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 412</h6>
-              <p class="animated fadeInUp">17 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
+              <p class="animated fadeInUp">29 місць</p>
             </div>
           </div>
         </a>
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/mb 416.jpg" data-title="Mercedes Benz 416 CDI" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/mb 416.jpg" alt="Mercedes Benz 416 CDI">
+        <a href="images/dest/bus/mb 412.jpg" data-title="Mercedes Benz 412" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 412.jpg" alt="Mercedes Benz 412">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 416 CDI</h6>
-              <p class="animated fadeInUp">16 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 412</h6>
+              <p class="animated fadeInUp">17 місць</p>
             </div>
           </div>
         </a>
@@ -282,12 +308,12 @@
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/neoplan n213 shd.jpg" data-title="NEOPLAN" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/neoplan n213 shd.jpg" alt="NEOPLAN">
+        <a href="images/dest/bus/vw lt35.jpg" data-title="VOLKSWAGEN lt-35" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/vw lt35.jpg" alt="VOLKSWAGEN lt-35">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">NEOPLAN</h6>
-              <p class="animated fadeInUp">49 місць</p>
+              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-35</h6>
+              <p class="animated fadeInUp">16-17-20 місць</p>
             </div>
           </div>
         </a>
@@ -330,6 +356,18 @@
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
+        <a href="images/dest/bus/mb 416.jpg" data-title="Mercedes Benz 416 CDI" data-lightbox="gallery-image">
+          <img class="img-fluid" src="images/dest/bus/mb 416.jpg" alt="Mercedes Benz 416 CDI">
+          <div class="gallery-item-overlay">
+            <div class="gallery-item-info">
+              <h6 class="upper-text mb-1 animated fadeInDown">Mercedes Benz 416 CDI</h6>
+              <p class="animated fadeInUp">16 місць</p>
+            </div>
+          </div>
+        </a>
+      </li>
+
+      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus/toyota 1999.jpg" data-title="TOYOTA" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus/toyota 1999.jpg" alt="TOYOTA">
           <div class="gallery-item-overlay">
@@ -354,48 +392,12 @@
       </li>
 
       <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/vw lt35.jpg" data-title="VOLKSWAGEN lt-35" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/vw lt35.jpg" alt="VOLKSWAGEN lt-35">
-          <div class="gallery-item-overlay">
-            <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-35</h6>
-              <p class="animated fadeInUp">16-17-20 місць</p>
-            </div>
-          </div>
-        </a>
-      </li>
-
-      <li class="gallery-item col-xl-3 col-6 col-md-4">
         <a href="images/dest/bus/vw lt46 2000.jpg" data-title="VOLKSWAGEN lt-46" data-lightbox="gallery-image">
           <img class="img-fluid" src="images/dest/bus/vw lt46 2000.jpg" alt="VOLKSWAGEN lt-46">
           <div class="gallery-item-overlay">
             <div class="gallery-item-info">
               <h6 class="upper-text mb-1 animated fadeInDown">VOLKSWAGEN lt-46</h6>
               <p class="animated fadeInUp">16-18 місць</p>
-            </div>
-          </div>
-        </a>
-      </li>
-
-      <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/yutong2007.jpg" data-title="YUTONG" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/yutong2007.jpg" alt="YUTONG">
-          <div class="gallery-item-overlay">
-            <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
-              <p class="animated fadeInUp">29 місць</p>
-            </div>
-          </div>
-        </a>
-      </li>
-
-      <li class="gallery-item col-xl-3 col-6 col-md-4">
-        <a href="images/dest/bus/yutong2008.jpg" data-title="YUTONG" data-lightbox="gallery-image">
-          <img class="img-fluid" src="images/dest/bus/yutong2008.jpg" alt="YUTONG">
-          <div class="gallery-item-overlay">
-            <div class="gallery-item-info">
-              <h6 class="upper-text mb-1 animated fadeInDown">YUTONG</h6>
-              <p class="animated fadeInUp">29 місць</p>
             </div>
           </div>
         </a>
