--- a/app/index.html
+++ b/app/index.html
@@ -433,15 +433,15 @@
           </li>
           <li class="row align-items-center justify-content-center justify-content-md-start my-3">
             <img class="img-fluid mr-2" src="images/dest/logo-kievstar.png" alt="logo-kievstar">
-            <span>(097) 480 24 28</span>
+            <span><a href="tel:+380974802428">(097) 480 24 28</a></span>
           </li>
           <li class="row align-items-center justify-content-center justify-content-md-start my-3">
             <img class="img-fluid mr-2" src="images/dest/logo-vodafone.png" alt="logo-vodafone">
-            <span>(099) 078 20 21</span>
+            <span><a href="tel:+380990782021">(099) 078 20 21</a></span>
           </li>
           <li class="row align-items-center justify-content-center justify-content-md-start my-3">
             <img class="img-fluid mr-2" src="images/dest/logo-lifecell.png" alt="logo-lifecell">
-            <span>(093) 966 09 40</span>
+            <span><a href="tel:+380939660940">(093) 966 09 40</a></span>
           </li>
           <li class="row align-items-center justify-content-center justify-content-md-start my-3">
             <img class="map-mark img-fluid mr-2" src="images/dest/map-mark.png" alt="map-mark">
@@ -450,12 +450,85 @@
           <li class="row align-items-center justify-content-center justify-content-md-start my-3">
             <span class="ml-md-5">м. Черкаси</span>
           </li>
-
         </ul>
         <div class="row justify-content-center mt-5 pb-5 text-uppercase contacts-button">
-          <a class="text-nowrap col-sm-2 btn btn-danger btn-about btn-lg m-2" href="https://avto-ekspres.com/" target="_blank" role="button">Забронювати квитки</a>
+          <button class="text-nowrap btn btn-danger btn-about btn-lg m-2"  data-toggle="modal" data-target="#feedbackFormModal">Заказать звонок</button>
         </div>
       </div>
+
+      <!-- Форма обратной связи в модальном окне -->
+      <div class="modal" id="feedbackFormModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="myModalLabel">Форма обратной связи</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+
+              <!-- Форма обратной связи -->
+              <form id="feedbackForm" action="/feedback/process/process.php" enctype="multipart/form-data" novalidate>
+                <div class="form-row">
+                  <div class="col-sm-6">
+                    <!-- Имя пользователя -->
+                    <div class="form-group">
+                      <label for="name" class="control-label">Ваше имя</label>
+                      <input id="name" type="text" name="name" class="form-control" value="" placeholder="Имя" minlength="2" maxlength="30" required="required">
+                      <div class="invalid-feedback"></div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+
+                    <!-- Телефон пользователя -->
+                    <div class="form-group">
+                      <label for="phone" class="control-label">Ваш телефон</label>
+                      <input id="phone" type="tel" name="phone" required="required" class="form-control" value="" placeholder="Телефон">
+                      <div class="invalid-feedback"></div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Сообщение пользователя -->
+                <div class="form-group">
+                  <label for="message" class="control-label">Сообщение</label>
+                  <textarea id="message" name="message" class="form-control" rows="3" placeholder="Сообщение" maxlength="500"></textarea>
+                  <div class="invalid-feedback"></div>
+                </div>
+
+                <!-- Пользовательское солашение -->
+                <div class="form-group agreement">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" name="agree" class="custom-control-input" id="customCheck">
+                    <label class="custom-control-label" for="customCheck">Я не робот</label>
+                  </div>
+                </div>
+                <!-- Сообщение -->
+                <div class="alert alert-danger form-error d-none">
+                  Исправьте данные и отправьте форму ещё раз.
+                </div>
+                <!-- Индикация загрузки данных формы на сервер -->
+                <div class="progress mb-2 d-none">
+                  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                       aria-valuemax="100" style="width: 0">
+                    <span class="sr-only">0%</span>
+                  </div>
+                </div>
+                <!-- Кнопка для отправки формы  disabled="disabled"-->
+                <div class="text-right submit">
+                  <button type="submit" class="btn btn-primary" disabled="disabled">Отправить сообщение</button>
+                </div>
+              </form>
+              <!-- Сообщение об успешной отправки формы -->
+              <div class="alert alert-success form-success mb-0 d-none">
+                Форма успешно отправлена. Нажмите на
+                <a href="#" data-form="#feedbackForm">ссылку</a>, чтобы отправить ещё одно сообщение.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="contacts-map col- col-md-6">
         <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d917.2751244567756!2d32.070718771088046!3d49.438289904681945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcfd95278d99b1d72!2z0JDQstGC0L7QtdC60YHQv9GA0LXRgS3Qp9C10YDQutCw0YHQuA!5e0!3m2!1sru!2sua!4v1584875356485!5m2!1sru!2sua" width="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
