Added mask for phone input

--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,8 @@
     <p>Історія компанії почалася з 1 транспортної одиниці та 1 маршруту. Поступово наш автопарк розширювався і сьогодні до послуг наших кліентів 35 автобусів різної місткості. Ми ретельно контролюємо технічний стан кожного транспортного засобу.</p>
     <p>Наші водії характеризуються високими знаннями технічної бази автотранспортних засобів, автомобільних доріг України, безаварійним досвідом роботи.</p>
     <h3 class="h2 text-center mb-5 pt-5">Напрямки:</h3>
-    <h4 class="text-center mb-3">Черкаси-Київ, Черкаси-Вінниця, Черкаси-Харків, Черкаси-Дніпро</h4>
-    <h4 class="text-center mb-3">Київ-Черкаси, Вінниця-Черкаси, Харків-Черкаси, Дніпро-Черкаси</h4>
+    <h4 class="text-center mb-3">Черкаси-Київ, Черкаси-Вінниця, Черкаси-Харків, Черкаси-Дніпро, Черкаси-Полтава</h4>
+    <h4 class="text-center mb-3">Київ-Черкаси, Вінниця-Черкаси, Харків-Черкаси, Дніпро-Черкаси, Полтава-Черкаси</h4>
     <h2 class="h2 text-center mb-5 pt-5">Наші переваги</h2>
     <div class="about-items text-center">
       <div class="about-item">Досвід роботи</div>
@@ -483,9 +483,11 @@
 
                     <!-- Телефон пользователя -->
                     <div class="form-group">
-                      <label for="phone" class="control-label">Ваш телефон</label>
-                      <input id="phone" type="tel" name="phone" required="required" class="form-control" value="" placeholder="Телефон">
-                      <div class="invalid-feedback"></div>
+                      <label for="phone" class="control-label">
+                        Ваш телефон
+                      </label>
+                        <input id="phone" type="tel" name="phone" required="required" class="form-control" value="" placeholder="+38(___) ___ __ __">
+                        <div class="invalid-feedback"></div>
                     </div>
                   </div>
                 </div>
